^ [#19288] Css - Fix Joomla Templates who overrided the text-align center in the profile box
git-svn-id: file:///Users/oratzes/svn/kunena@3204 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/branches/1.6-810-bugfixes-14-08-2010/components/com_kunena/template/default/css/kunena.forum.css
+++ b/branches/1.6-810-bugfixes-14-08-2010/components/com_kunena/template/default/css/kunena.forum.css
@@ -1816,7 +1816,7 @@ PX		EM			PCT			PT
 	list-style-type: none;
 	display:block;
 	padding-bottom: 1px;
-	text-align: center;
+	text-align:center !important;
 }
 
 #Kunena ul#kpost-profile li.kpost-username {font-size: 1.333em;}
